--- a/showpsd/.vscode/settings.json
+++ b/showpsd/.vscode/settings.json
@@ -3,6 +3,7 @@
         "iostream": "cpp",
         "*.tcc": "cpp",
         "compare": "cpp",
-        "type_traits": "cpp"
+        "type_traits": "cpp",
+        "functional": "cpp"
     }
 }
