rms filter and max spectrum added in showrms.cpp

--- a/showpsd/Makefile
+++ b/showpsd/Makefile
@@ -1,6 +1,6 @@
 $(shell mkdir -p bin)
 
-all: bin/showpsd bin/showdif bin/benchmark bin/showdif2 bin/acquire
+all: bin/showpsd bin/showdif bin/benchmark bin/showdif2 bin/showrms
 
 bin/showpsd: src/showpsd.cpp src/slmx4_vcom.cpp src/serialib.cpp inc/slmx4_vcom.h inc/serialib.h
 	g++ -g -Wall -o bin/showpsd -I inc src/showpsd.cpp src/slmx4_vcom.cpp src/serialib.cpp
@@ -16,9 +16,9 @@ bin/showdif2: src/showdif2.cpp src/peak.c src/slmx4_vcom.cpp src/serialib.cpp sr
 			  inc/peak.h inc/slmx4_vcom.h inc/serialib.h inc/frameFilter.h
 	g++ -g -Wall -o bin/showdif2 -I inc src/showdif2.cpp src/peak.c src/slmx4_vcom.cpp src/serialib.cpp src/frameFilter.c
 
-bin/acquire: src/acquire.cpp src/slmx4_vcom.cpp src/serialib.cpp \
-			 inc/slmx4_vcom.h inc/serialib.h
-	g++ -g -Wall -o bin/acquire -I inc src/acquire.cpp src/slmx4_vcom.cpp src/serialib.cpp
+bin/showrms: src/showrms.cpp src/slmx4_vcom.cpp src/serialib.cpp src/rms.c src/frameFilter.c \
+			 inc/slmx4_vcom.h inc/serialib.h inc/rms.h inc/frameFilter.h
+	g++ -g -Wall -o bin/showrms -I inc src/showrms.cpp src/slmx4_vcom.cpp src/serialib.cpp src/rms.c src/frameFilter.c
 
 clean:
 	rm -rf bin
