--- a/showpsd/Makefile
+++ b/showpsd/Makefile
@@ -1,6 +1,6 @@
 $(shell mkdir -p bin)
 
-all: bin/showpsd bin/showdif bin/benchmark bin/showdif2 bin/showrms bin/showfreq bin/testzeroxing
+all: bin/showpsd bin/showdif bin/benchmark bin/showfilter bin/showrms bin/showfreq bin/testzeroxing
 
 bin/showpsd: src/showpsd.cpp src/slmx4_vcom.cpp src/serialib.cpp inc/slmx4_vcom.h inc/serialib.h
 	g++ -g -Wall -o bin/showpsd -I inc src/showpsd.cpp src/slmx4_vcom.cpp src/serialib.cpp
@@ -12,9 +12,9 @@ bin/showdif: src/showdif.cpp src/peak.c src/slmx4_vcom.cpp src/serialib.cpp \
 bin/benchmark: src/benchmark.cpp src/slmx4_vcom.cpp src/serialib.cpp inc/slmx4_vcom.h inc/serialib.h
 	g++ -g -Wall -o bin/benchmark -I inc src/benchmark.cpp src/slmx4_vcom.cpp src/serialib.cpp
 
-bin/showdif2: src/showdif2.cpp src/peak.c src/slmx4_vcom.cpp src/serialib.cpp src/frameFilter.c\
+bin/showfilter: src/showfilter.cpp src/peak.c src/slmx4_vcom.cpp src/serialib.cpp src/frameFilter.c\
 			  inc/peak.h inc/slmx4_vcom.h inc/serialib.h inc/frameFilter.h
-	g++ -g -Wall -o bin/showdif2 -I inc src/showdif2.cpp src/peak.c src/slmx4_vcom.cpp src/serialib.cpp src/frameFilter.c
+	g++ -g -Wall -o bin/showfilter -I inc src/showfilter.cpp src/peak.c src/slmx4_vcom.cpp src/serialib.cpp src/frameFilter.c
 
 bin/showrms: src/showrms.cpp src/slmx4_vcom.cpp src/serialib.cpp src/rms.c src/frameFilter.c \
 			 inc/slmx4_vcom.h inc/serialib.h inc/rms.h inc/frameFilter.h
