lib directory create.  Makefiles updated

--- a/firstreflex/Makefile
+++ b/firstreflex/Makefile
@@ -1,4 +1,10 @@
-all: bin/extract_breath bin/extract_breath2
+$(shell mkdir -p bin)
+
+LINC = ../lib/inc
+LSRC = ../lib/src
+
+all: 	bin/extract_breath \
+		bin/extract_breath2
 
 bin/extract_breath: src/extract_breath.c
 	gcc -g -o bin/extract_breath src/extract_breath.c
@@ -8,5 +14,3 @@ bin/extract_breath2: src/extract_breath2.c
 
 clean:
 	rm -rf bin
-
-$(shell mkdir -p bin)
