--- a/showpsd/Makefile
+++ b/showpsd/Makefile
@@ -1,52 +1,79 @@
 $(shell mkdir -p bin)
 
-all: bin/showpsd bin/showdif bin/benchmark bin/showfilter bin/showrms bin/showfreq bin/testzeroxing \
-     bin/showfreq2 bin/showfreq3 bin/showfreq3_dbg bin/showfreq4 bin/breath1
+LINC = ../lib/inc
+LSRC = ../lib/src
 
-bin/showpsd: src/showpsd.cpp src/slmx4_vcom.cpp src/serialib.cpp inc/slmx4_vcom.h inc/serialib.h
-	g++ -g -Wall -o bin/showpsd -I inc src/showpsd.cpp src/slmx4_vcom.cpp src/serialib.cpp
+all: 	bin/showpsd \
+		bin/showdif \
+		bin/benchmark \
+		bin/showfilter \
+		bin/showrms \
+		bin/showfreq \
+		bin/testzeroxing \
+    	bin/showfreq2 \
+		bin/showfreq3 \
+		bin/showfreq3_dbg \
+		bin/showfreq4 
 
-bin/showdif: src/showdif.cpp src/peak.c src/slmx4_vcom.cpp src/serialib.cpp \
-			 inc/peak.h inc/slmx4_vcom.h inc/serialib.h
-	g++ -g -Wall -o bin/showdif -I inc src/showdif.cpp src/peak.c src/slmx4_vcom.cpp src/serialib.cpp
+bin/showpsd: src/showpsd.cpp \
+		$(LSRC)/slmx4_vcom.cpp $(LSRC)/serialib.cpp \
+		$(LINC)/slmx4_vcom.h   $(LINC)/serialib.h
+	g++ -g -Wall -o bin/showpsd -I $(LINC) src/showpsd.cpp $(LSRC)/slmx4_vcom.cpp $(LSRC)/serialib.cpp
 
-bin/benchmark: src/benchmark.cpp src/slmx4_vcom.cpp src/serialib.cpp inc/slmx4_vcom.h inc/serialib.h
-	g++ -g -Wall -o bin/benchmark -I inc src/benchmark.cpp src/slmx4_vcom.cpp src/serialib.cpp
+bin/showdif: src/showdif.cpp \
+		$(LSRC)/peak.c $(LSRC)/slmx4_vcom.cpp $(LSRC)/serialib.cpp \
+		$(LINC)/peak.h $(LINC)/slmx4_vcom.h   $(LINC)/serialib.h
+	g++ -g -Wall -o bin/showdif -I $(LINC) src/showdif.cpp $(LSRC)/peak.c $(LSRC)/slmx4_vcom.cpp $(LSRC)/serialib.cpp
 
-bin/showfilter: src/showfilter.cpp src/peak.c src/slmx4_vcom.cpp src/serialib.cpp src/frameFilter.c\
-			  inc/peak.h inc/slmx4_vcom.h inc/serialib.h inc/frameFilter.h
-	g++ -g -Wall -o bin/showfilter -I inc src/showfilter.cpp src/peak.c src/slmx4_vcom.cpp src/serialib.cpp src/frameFilter.c
+bin/benchmark: src/benchmark.cpp \
+		$(LSRC)/slmx4_vcom.cpp $(LSRC)/serialib.cpp \
+		$(LINC)/slmx4_vcom.h   $(LINC)/serialib.h
+	g++ -g -Wall -o bin/benchmark -I $(LINC) src/benchmark.cpp $(LSRC)/slmx4_vcom.cpp $(LSRC)/serialib.cpp
 
-bin/showrms: src/showrms.cpp src/slmx4_vcom.cpp src/serialib.cpp src/rms.c src/frameFilter.c \
-			 inc/slmx4_vcom.h inc/serialib.h inc/rms.h inc/frameFilter.h
-	g++ -g -Wall -o bin/showrms -I inc src/showrms.cpp src/slmx4_vcom.cpp src/serialib.cpp src/rms.c src/frameFilter.c
+bin/showfilter: src/showfilter.cpp src/frameFilter.c inc/frameFilter.h \
+		$(LSRC)/peak.c $(LSRC)/slmx4_vcom.cpp $(LSRC)/serialib.cpp \
+		$(LINC)/peak.h $(LINC)/slmx4_vcom.h   $(LINC)/serialib.h 
+	g++ -g -Wall -o bin/showfilter -I inc -I $(LINC) src/showfilter.cpp src/frameFilter.c \
+		$(LSRC)/peak.c $(LSRC)/slmx4_vcom.cpp $(LSRC)/serialib.cpp 
 
-bin/showfreq: src/showfreq.cpp src/slmx4_vcom.cpp src/serialib.cpp src/rms.c src/frameFilter.c src/zeroxing.c \
-			 inc/slmx4_vcom.h inc/serialib.h inc/rms.h inc/frameFilter.h inc/zeroxing.h
-	g++ -g -Wall -o bin/showfreq -I inc src/showfreq.cpp src/slmx4_vcom.cpp src/serialib.cpp src/rms.c src/frameFilter.c src/zeroxing.c
+bin/showrms: src/showrms.cpp src/frameFilter.c inc/frameFilter.h \
+		$(LSRC)/slmx4_vcom.cpp $(LSRC)/serialib.cpp $(LSRC)/rms.c \
+		$(LINC)/slmx4_vcom.h   $(LINC)/serialib.h   $(LSRC)/rms.h
+	g++ -g -Wall -o bin/showrms -I inc -I $(LINC) src/showrms.cpp src/frameFilter.c \
+		$(LSRC)/slmx4_vcom.cpp $(LSRC)/serialib.cpp $(LSRC)/rms.c 
 
-bin/testzeroxing: src/testzeroxing.cpp src/zeroxing.c inc/zeroxing.h
-	g++ -g -Wall -o bin/testzeroxing -I inc src/testzeroxing.cpp src/zeroxing.c
+bin/showfreq: src/showfreq.cpp src/frameFilter.c inc/frameFilter.h \
+		$(LSRC)/slmx4_vcom.cpp $(LSRC)/serialib.cpp $(LSRC)/rms.c $(LSRC)/zeroxing.c \
+		$(LINC)/slmx4_vcom.h   $(LINC)/serialib.h   $(LINC)/rms.h $(LINC)/zeroxing.h
+	g++ -g -Wall -o bin/showfreq -I inc -I $(LINC) src/showfreq.cpp src/frameFilter.c \
+		$(LSRC)/slmx4_vcom.cpp $(LSRC)/serialib.cpp $(LSRC)/rms.c $(LSRC)/zeroxing.c
 
-bin/showfreq2: src/showfreq2.cpp src/slmx4_vcom.cpp src/serialib.cpp src/rms.c src/frameFilter.c src/zeroxing.c \
-			 inc/slmx4_vcom.h inc/serialib.h inc/rms.h inc/frameFilter.h inc/zeroxing.h
-	g++ -g -Wall -o bin/showfreq2 -I inc src/showfreq2.cpp src/slmx4_vcom.cpp src/serialib.cpp src/rms.c src/frameFilter.c src/zeroxing.c
+bin/testzeroxing: src/testzeroxing.cpp $(LSRC)/zeroxing.c $(LINC)/zeroxing.h
+	g++ -g -Wall -o bin/testzeroxing -I $(LINC) $(LSRC)/testzeroxing.cpp $(LSRC)/zeroxing.c
 
-bin/showfreq3: src/showfreq3.cpp src/slmx4_vcom.cpp src/serialib.cpp src/frameFilter.c src/zeroxing.c \
-			 inc/slmx4_vcom.h inc/serialib.h inc/frameFilter.h inc/zeroxing.h
-	g++ -g -Wall -o bin/showfreq3 -I inc src/showfreq3.cpp src/slmx4_vcom.cpp src/serialib.cpp src/frameFilter.c src/zeroxing.c
+bin/showfreq2: src/showfreq2.cpp src/frameFilter.c inc/frameFilter.h \
+		$(LSRC)/slmx4_vcom.cpp $(LSRC)/serialib.cpp $(LSRC)/rms.c $(LSRC)/zeroxing.c \
+		$(LINC)/slmx4_vcom.h   $(LINC)/serialib.h   $(LINC)/rms.h $(LINC)/zeroxing.h
+	g++ -g -Wall -o bin/showfreq2 -I inc -I $(LINC) src/showfreq2.cpp src/frameFilter.c \
+		$(LSRC)/slmx4_vcom.cpp $(LSRC)/serialib.cpp $(LSRC)/rms.c $(LSRC)/zeroxing.c
+
+bin/showfreq3: src/showfreq3.cpp src/frameFilter.c inc/frameFilter.h \
+		$(LSRC)/slmx4_vcom.cpp $(LSRC)/serialib.cpp $(LSRC)/zeroxing.c \
+		$(LINC)/slmx4_vcom.h   $(LINC)/serialib.h   $(LINC)/zeroxing.h
+	g++ -g -Wall -o bin/showfreq3 - inc -I $(LINC) src/showfreq3.cpp src/frameFilter.c \
+		$(LSRC)/slmx4_vcom.cpp $(LSRC)/serialib.cpp $(LSRC)/zeroxing.c
 
 bin/showfreq3_dbg: src/showfreq3_dbg.cpp
-	g++ -g -Wall -o bin/showfreq3_dbg -I inc src/showfreq3_dbg.cpp
+	g++ -g -Wall -o bin/showfreq3_dbg src/showfreq3_dbg.cpp
 
-bin/showfreq4: src/showfreq4.cpp src/slmx4_vcom.cpp src/serialib.cpp src/frameFilter.c src/spatialFilter.c src/breathFilter.c src/zeroxing.c \
-			 inc/slmx4_vcom.h inc/serialib.h inc/frameFilter.h inc/spatialFilter.h inc/breathFilter.h inc/zeroxing.h
-	g++ -g -Wall -o bin/showfreq4 -I inc src/showfreq4.cpp src/slmx4_vcom.cpp src/serialib.cpp src/frameFilter.c src/spatialFilter.c src/breathFilter.c src/zeroxing.c
-
-bin/breath1: src/breath1.cpp src/slmx4_vcom.cpp src/serialib.cpp src/frameFilter.c src/spatialFilter.c src/breathFilter.c src/zeroxing.c \
-			 inc/slmx4_vcom.h inc/serialib.h inc/frameFilter.h inc/spatialFilter.h inc/breathFilter.h inc/zeroxing.h
-	g++ -g -Wall -o bin/breath1 -I inc src/breath1.cpp src/slmx4_vcom.cpp src/serialib.cpp src/frameFilter.c src/spatialFilter.c src/breathFilter.c src/zeroxing.c
-
+bin/showfreq4: src/showfreq4.cpp \
+		src/frameFilter.c src/spatialFilter.c src/breathFilter.c \
+		inc/frameFilter.h inc/spatialFilter.h inc/breathFilter.h \
+		$(LSRC)/slmx4_vcom.cpp $(LSRC)/serialib.cpp $(LSRC)/zeroxing.c \
+		$(LINC)/slmx4_vcom.h $(LINC)/serialib.h $(LINC)/zeroxing.h
+	g++ -g -Wall -o bin/showfreq4 -I inc src/showfreq4.cpp \
+		src/frameFilter.c src/spatialFilter.c src/breathFilter.c \
+		$(LSRC)/slmx4_vcom.cpp $(LSRC)/serialib.cpp $(LSRC)/zeroxing.c
 
 clean:
 	rm -rf bin
