--- a/showpsd/Makefile
+++ b/showpsd/Makefile
@@ -9,8 +9,7 @@ all: 	bin/showpsd \
 		bin/showfilter \
 		bin/showrms \
 		bin/showfreq \
-		bin/testzeroxing \
-    	bin/showfreq2 \
+		bin/showfreq2 \
 		bin/showfreq3 \
 		bin/showfreq3_dbg \
 		bin/showfreq4 
@@ -38,7 +37,7 @@ bin/showfilter: src/showfilter.cpp src/frameFilter.c inc/frameFilter.h \
 
 bin/showrms: src/showrms.cpp src/frameFilter.c inc/frameFilter.h \
 		$(LSRC)/slmx4_vcom.cpp $(LSRC)/serialib.cpp $(LSRC)/rms.c \
-		$(LINC)/slmx4_vcom.h   $(LINC)/serialib.h   $(LSRC)/rms.h
+		$(LINC)/slmx4_vcom.h   $(LINC)/serialib.h   $(LINC)/rms.h
 	g++ -g -Wall -o bin/showrms -I inc -I $(LINC) src/showrms.cpp src/frameFilter.c \
 		$(LSRC)/slmx4_vcom.cpp $(LSRC)/serialib.cpp $(LSRC)/rms.c 
 
@@ -47,9 +46,6 @@ bin/showfreq: src/showfreq.cpp src/frameFilter.c inc/frameFilter.h \
 		$(LINC)/slmx4_vcom.h   $(LINC)/serialib.h   $(LINC)/rms.h $(LINC)/zeroxing.h
 	g++ -g -Wall -o bin/showfreq -I inc -I $(LINC) src/showfreq.cpp src/frameFilter.c \
 		$(LSRC)/slmx4_vcom.cpp $(LSRC)/serialib.cpp $(LSRC)/rms.c $(LSRC)/zeroxing.c
-
-bin/testzeroxing: src/testzeroxing.cpp $(LSRC)/zeroxing.c $(LINC)/zeroxing.h
-	g++ -g -Wall -o bin/testzeroxing -I $(LINC) $(LSRC)/testzeroxing.cpp $(LSRC)/zeroxing.c
 
 bin/showfreq2: src/showfreq2.cpp src/frameFilter.c inc/frameFilter.h \
 		$(LSRC)/slmx4_vcom.cpp $(LSRC)/serialib.cpp $(LSRC)/rms.c $(LSRC)/zeroxing.c \
@@ -60,7 +56,7 @@ bin/showfreq2: src/showfreq2.cpp src/frameFilter.c inc/frameFilter.h \
 bin/showfreq3: src/showfreq3.cpp src/frameFilter.c inc/frameFilter.h \
 		$(LSRC)/slmx4_vcom.cpp $(LSRC)/serialib.cpp $(LSRC)/zeroxing.c \
 		$(LINC)/slmx4_vcom.h   $(LINC)/serialib.h   $(LINC)/zeroxing.h
-	g++ -g -Wall -o bin/showfreq3 - inc -I $(LINC) src/showfreq3.cpp src/frameFilter.c \
+	g++ -g -Wall -o bin/showfreq3 -I inc -I $(LINC) src/showfreq3.cpp src/frameFilter.c \
 		$(LSRC)/slmx4_vcom.cpp $(LSRC)/serialib.cpp $(LSRC)/zeroxing.c
 
 bin/showfreq3_dbg: src/showfreq3_dbg.cpp
@@ -71,7 +67,7 @@ bin/showfreq4: src/showfreq4.cpp \
 		inc/frameFilter.h inc/spatialFilter.h inc/breathFilter.h \
 		$(LSRC)/slmx4_vcom.cpp $(LSRC)/serialib.cpp $(LSRC)/zeroxing.c \
 		$(LINC)/slmx4_vcom.h $(LINC)/serialib.h $(LINC)/zeroxing.h
-	g++ -g -Wall -o bin/showfreq4 -I inc src/showfreq4.cpp \
+	g++ -g -Wall -o bin/showfreq4 -I inc -I $(LINC) src/showfreq4.cpp \
 		src/frameFilter.c src/spatialFilter.c src/breathFilter.c \
 		$(LSRC)/slmx4_vcom.cpp $(LSRC)/serialib.cpp $(LSRC)/zeroxing.c
 
