fft2.c functionnal, but strange behavior when using structure

--- a/firstreflex/Makefile
+++ b/firstreflex/Makefile
@@ -8,7 +8,8 @@ all: 	bin/extract_breath \
 		bin/showfreq5 \
 		bin/breath3 \
 		bin/fft1 \
-		bin/breath4
+		bin/fft2 \
+		bin/breath4 
 
 bin/extract_breath: src/extract_breath.c
 	gcc -g -o bin/extract_breath src/extract_breath.c
@@ -37,13 +38,20 @@ bin/breath3: src/breath3.cpp \
 bin/fft1: src/fft1.c 
 	gcc -g -Wall -o bin/fft1 src/fft1.c -lm -lfftw3f
 
+bin/fftwrapper.o: src/fftwrapper.c inc/fftwrapper.h
+	gcc -g -Wall -c -o bin/fftwrapper.o -I inc src/fftwrapper.c
+
+bin/fft2: src/fft2.c src/fftwrapper.c inc/fftwrapper.h 
+	gcc -g -Wall -o bin/fft2 -I inc src/fft2.c src/fftwrapper.c -lm -lfftw3f
+
 bin/breath4: src/breath4.cpp \
-		src/breathFilter.c src/fftwrapper.c \
-		inc/breathFilter.h inc/fftwrapper.h \
+		src/breathFilter.c \
+		inc/breathFilter.h \
+		bin/fftwrapper.o \
 		$(LSRC)/slmx4_vcom.cpp $(LSRC)/serialib.cpp $(LSRC)/peak.c $(LSRC)/tinyosc.c \
 		$(LINC)/slmx4_vcom.h $(LINC)/serialib.h $(LINC)/peak.h $(LINC)/tinyosc.h
 	g++ -g -Werror -o bin/breath4 -I inc -I $(LINC) src/breath4.cpp \
-		src/breathFilter.c src/fftwrapper.c \
+		src/breathFilter.c bin/fftwrapper.o \
 		$(LSRC)/slmx4_vcom.cpp $(LSRC)/serialib.cpp $(LSRC)/peak.c $(LSRC)/tinyosc.c \
 		-lm -lfftw3f
 
