find_first_peak() and find_second_peak() logic is flawed

--- a/lib/test/Makefile
+++ b/lib/test/Makefile
@@ -3,10 +3,13 @@ $(shell mkdir -p bin)
 LINC = ../inc
 LSRC = ../src
 
-all: 	bin/testzeroxing 
+all: 	bin/testzeroxing bin/testpeak
 
-bin/testzeroxing: testzeroxing.cpp $(LSRC)/zeroxing.c $(LINC)/zeroxing.h
-	g++ -g -Wall -o bin/testzeroxing -I $(LINC) testzeroxing.cpp $(LSRC)/zeroxing.c
+bin/testzeroxing: testzeroxing.c $(LSRC)/zeroxing.c $(LINC)/zeroxing.h
+	gcc -g -Wall -o bin/testzeroxing -I $(LINC) testzeroxing.c $(LSRC)/zeroxing.c
+
+bin/testpeak: testpeak.c $(LSRC)/peak.c $(LINC)/peak.h
+	gcc -g -Wall -o bin/testpeak -I $(LINC) testpeak.c $(LSRC)/peak.c -lm
 
 clean:
 	rm -rf bin
